# cppProjects

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  config.ini
cmake/: linux-x64-toolchain.cmake  msvc-64-toolchain.cmake
materialUi/: CMakeLists.txt
materialUi/components/: qtmaterialflatbutton.cpp  qtmaterialflatbutton.h  qtmaterialflatbutton_internal.cpp  qtmaterialflatbutton_p.h  qtmaterialtabs.cpp  qtmaterialtabs.h  qtmaterialtabs_internal.cpp  qtmaterialtabs_p.h
src/: CMakeLists.txt
src/forms/: ImageCtrl.ui  MainWindow.ui  QtCmake.ui  VariablesWidget.ui  mainControl.ui  seedliftctrl.ui
src/include/: AppConfig.h  AppHelper.h  Global.h  MainWindow.h  QtCmake.h  Singleton.h  UiHelper.h  frmmessagebox.h  iconhelper.h  log4cplusImp.h  mainControl.h  pch.h
src/include/widgetsInclude/: ImageCtrl.h  ImgLabel.h  MainWindow.h  VariablesWidget.h  baseWidget.h  mainControl.h  seedliftctrl.h
src/resources/: MainWindow.qrc  QtCmake.qrc
src/resources/style/: MainWindow.qss  mainControl.qss
src/sources/: AppConfig.cpp  ImageCtrl.cpp  ImgLabel.cpp  MainWindow.cpp  QtCmake.cpp  UiHelper.cpp  VariablesWidget.cpp  frmmessagebox.cpp  log4cplusImp.cpp  main.cpp  mainControl.cpp  seedliftctrl.cpp
