set(m_ui_sources 
    components/qtmaterialavatar.cpp 
    components/lib/qtmaterialstyle.cpp 
    components/lib/qtmaterialtheme.cpp 
    components/qtmaterialbadge.cpp 
    components/lib/qtmaterialoverlaywidget.cpp 
    components/qtmaterialcheckbox.cpp 
    components/lib/qtmaterialcheckable_internal.cpp 
    components/lib/qtmaterialcheckable.cpp 
    components/lib/qtmaterialripple.cpp 
    components/lib/qtmaterialrippleoverlay.cpp 
    components/qtmaterialfab.cpp 
    components/qtmaterialraisedbutton.cpp 
    components/qtmaterialflatbutton_internal.cpp 
    components/qtmaterialflatbutton.cpp 
    components/lib/qtmaterialstatetransition.cpp 
    components/qtmaterialiconbutton.cpp 
    components/qtmaterialprogress_internal.cpp 
    components/qtmaterialprogress.cpp 
    components/qtmaterialcircularprogress_internal.cpp 
    components/qtmaterialcircularprogress.cpp 
    components/qtmaterialslider_internal.cpp 
    components/qtmaterialslider.cpp 
    components/qtmaterialsnackbar_internal.cpp 
    components/qtmaterialsnackbar.cpp 
    components/qtmaterialradiobutton.cpp 
    components/qtmaterialtoggle_internal.cpp 
    components/qtmaterialtoggle.cpp 
    components/qtmaterialtextfield_internal.cpp 
    components/qtmaterialtextfield.cpp 
    components/qtmaterialtabs_internal.cpp 
    components/qtmaterialtabs.cpp 
    components/qtmaterialscrollbar_internal.cpp 
    components/qtmaterialscrollbar.cpp 
    components/qtmaterialdialog_internal.cpp 
    components/qtmaterialdialog.cpp 
    components/qtmaterialdrawer_internal.cpp 
    components/qtmaterialdrawer.cpp 
    components/qtmaterialappbar.cpp 
    components/qtmaterialautocomplete.cpp 
    components/qtmaterialpaper.cpp 
    components/qtmaterialtable.cpp 
    components/qtmaterialautocomplete_internal.cpp 
    components/qtmaterialmenu.cpp 
    components/qtmateriallist.cpp 
    components/qtmateriallistitem.cpp
)
set(m_ui_headers 
    components/qtmaterialavatar_p.h 
    components/qtmaterialavatar.h 
    components/lib/qtmaterialstyle_p.h 
    components/lib/qtmaterialstyle.h 
    components/lib/qtmaterialtheme_p.h 
    components/lib/qtmaterialtheme.h 
    components/qtmaterialbadge_p.h 
    components/qtmaterialbadge.h 
    components/lib/qtmaterialoverlaywidget.h 
    components/qtmaterialcheckbox_p.h 
    components/qtmaterialcheckbox.h 
    components/lib/qtmaterialcheckable_internal.h 
    components/lib/qtmaterialcheckable_p.h 
    components/lib/qtmaterialripple.h 
    components/lib/qtmaterialrippleoverlay.h 
    components/lib/qtmaterialcheckable.h 
    components/qtmaterialfab_p.h 
    components/qtmaterialfab.h 
    components/qtmaterialraisedbutton_p.h 
    components/qtmaterialraisedbutton.h 
    components/qtmaterialflatbutton_internal.h 
    components/qtmaterialflatbutton_p.h 
    components/qtmaterialflatbutton.h 
    components/lib/qtmaterialstatetransition.h 
    components/lib/qtmaterialstatetransitionevent.h 
    components/qtmaterialiconbutton_p.h 
    components/qtmaterialiconbutton.h 
    components/qtmaterialprogress_internal.h 
    components/qtmaterialprogress_p.h 
    components/qtmaterialprogress.h 
    components/qtmaterialcircularprogress_internal.h 
    components/qtmaterialcircularprogress_p.h 
    components/qtmaterialcircularprogress.h 
    components/qtmaterialslider_internal.h 
    components/qtmaterialslider_p.h 
    components/qtmaterialslider.h 
    components/qtmaterialsnackbar_internal.h 
    components/qtmaterialsnackbar_p.h 
    components/qtmaterialsnackbar.h 
    components/qtmaterialradiobutton_p.h 
    components/qtmaterialradiobutton.h 
    components/qtmaterialtoggle_internal.h 
    components/qtmaterialtoggle_p.h 
    components/qtmaterialtoggle.h 
    components/qtmaterialtextfield_internal.h 
    components/qtmaterialtextfield_p.h 
    components/qtmaterialtextfield.h 
    components/qtmaterialtabs_internal.h 
    components/qtmaterialtabs_p.h 
    components/qtmaterialtabs.h 
    components/qtmaterialscrollbar_internal.h 
    components/qtmaterialscrollbar_p.h 
    components/qtmaterialscrollbar.h 
    components/qtmaterialdialog_internal.h 
    components/qtmaterialdialog_p.h 
    components/qtmaterialdialog.h 
    components/qtmaterialdrawer_internal.h 
    components/qtmaterialdrawer_p.h 
    components/qtmaterialdrawer.h 
    components/qtmaterialappbar.h 
    components/qtmaterialappbar_p.h 
    components/qtmaterialautocomplete.h 
    components/qtmaterialautocomplete_p.h 
    components/qtmaterialpaper.h 
    components/qtmaterialpaper_p.h 
    components/qtmaterialtable.h 
    components/qtmaterialtable_p.h 
    components/qtmaterialautocomplete_internal.h 
    components/qtmaterialmenu.h 
    components/qtmaterialmenu_p.h 
     
    components/qtmateriallist.h 
    components/qtmateriallist_p.h 
    components/qtmateriallistitem.h 
    components/qtmateriallistitem_p.h
)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
qt5_add_resources(m_ui_QRC_FILES components/resources.qrc)

add_library(materialUi STATIC
    ${m_ui_sources}
    ${m_ui_headers}
    ${m_ui_QRC_FILES}
)

target_link_libraries(materialUi PUBLIC Qt5::Core Qt5::Gui Qt5::Widgets)
target_include_directories(materialUi PUBLIC 
${CMAKE_CURRENT_SOURCE_DIR}/components
${CMAKE_CURRENT_SOURCE_DIR}/components/lib
)